# BirdNET-observation-station

./: README.md  pyproject.toml
birdnet_observation_station/: main.py  observation_station.py
