[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birdnet-observation-station"
version = "0.0.1"

requires-python = ">= 3.11"

dependencies = [
    "pyaudio ~= 0.2.14",
    "birdnetlib ~= 0.18.0",
    "librosa ~= 0.10.2",
    "tensorflow ~= 2.18.0",
]

[project.scripts]
birdnet-observation-station = "birdnet_observation_station.main:main"
